# headroom

./: .commitlintrc.json  .env.example  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.gpu  Dockerfile.vscode-plugin  GROWTH.md  Makefile  NOTICE  OSS_PR_STRATEGY.md  README-CN.md  README.md  README.zh-CN.md  RUST_DEV.md  Taskfile_leanctx.yml  codecov.yml  docker-bake.hcl  docker-compose.bedrock.yml  docker-compose.provider.yml  docker-compose.yml  index.html  llms.txt  mkdocs.yml  pyproject.toml  run_tests.bat  run_tests.sh  server.json  sitemap.xml
.cargo/: audit.toml
.claude-plugin/: marketplace.json
.devcontainer/: Dockerfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  dependency_change.md  feature_request.md  process_governance.md
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  devcontainers.yml  docker.yml  docs.yml  eval.yml  init-e2e.yml  init-native-e2e.yml  install-native-e2e.yml  publish.yml  release-please.yml  (+5 more)
.hermes/: pr-body.md
ARCHITECTURE/: index.html
LATENCY_BENCHMARKS/: index.html
LIMITATIONS/: index.html
REALIGNMENT/: 10-phase-H-python-retirement.md
agno/: index.html
api/: index.html
benchmarks/: claude_session_mode_benchmark.py  compression_benchmark.py  headroom_adversarial_benchmark.py  headroom_worst_case_benchmark.py  index.html  prefix_cache_benchmark.py  real_world_agent_benchmark.py
ccr/: index.html
compression/: index.html
configuration/: index.html
crates/headroom-py/: Cargo.toml
crates/headroom-py/src/: lib.rs
docs/: ARCHITECTURE.md  README.md  agno.md  agy-parity-matrix.md  auth-modes.md  bedrock-cli-setup.md  bedrock.md  benchmarks.md  claude-code-bedrock-headroom.md  embedding-server.md  langchain.md  learn.md  memory.md  metrics.md  next.config.mjs  package-lock.json  package.json  proxy.md
e2e/: docker-native-install.sh
errors/: index.html
examples/: capture_before_after_json.py  context_compression_demo.py  needle_in_haystack_test.py  real_before_after_test.py  show_actual_compression.py
getting-started/: index.html
headroom/: __init__.py  _ort.py  _subprocess.py  _version.py  binaries.py  cli.py  client.py  compress.py  config.py  copilot_auth.py  env.py  onnx_runtime.py  parser.py  paths.py  port_utils.py  release_version.py  update_check.py  utils.py
image-compression/: index.html
integration-guide/: index.html
langchain/: index.html
learn/: index.html
llmlingua/: index.html
macos-deployment/: index.html
mcp/: index.html
memory/: index.html
metrics/: index.html
proxy/: index.html
quickstart/: index.html
scripts/: build_rust_extension.sh  dedupe_telemetry.py  install.ps1  install.sh  pr-governance.py  refresh_model_limits.sh  repro_codex_replay.py  spot-tech-ci-headroom-hermes.service.example  version-sync.py
sdk/: index.html
search/: search_index.json
shared-context/: index.html
strands/: index.html
tests/: _mcp_stub.py  conftest.py  e2e_cortex_proxy.py  e2e_cortex_savings.py  test_adapter_hooks.py  test_agent_savings.py  test_agy_ca.py  test_agy_dispatch.py  test_agy_registrar.py  test_agy_terminator.py  test_anthropic_beta_session_sticky.py  test_anthropic_pre_upstream_backpressure.py  test_anthropic_stage_timings.py  test_azure_foundry_claude_compression.py  test_backend_anyllm.py  test_backend_bugs.py  test_backend_deepseek.py  test_bare_code_fence_regression.py  test_bedrock_region.py  test_binaries.py  test_bundled_tools_savings.py  test_carbon.py  test_ccr_batch_store.py  test_ccr_chat_retrieve_protection.py  test_ccr_context_tracker.py  test_ccr_mcp_server.py  test_ccr_mcp_server_extended.py  test_ccr_response_handler.py  test_ccr_response_handler_extra.py  test_ccr_tag_placeholder_regression.py  test_ccr_tool_injection.py  test_claude_session_mode_benchmark.py  test_cli_base_import.py  test_cli_doctor.py  test_cli_learn.py  test_cli_proxy_env.py  test_cli_tools.py  test_cli_update.py  test_codex_rate_limits.py  test_compaction_markdown_kv.py  (+177 more)
text-compression/: index.html
transforms/: index.html
troubleshooting/: index.html
wheelhouse/: README.md
wiki/: cli.md  configuration.md  dashboard.md  docker-install.md  getting-started.md  index.md  integration-guide.md  mcp.md  memory.md  metrics.md  persistent-installs.md  proxy.md  quickstart.md
(+492 files in other folders)
